Fixed css for navbar
Fixed the css for the navbar because the shopping cart image was too big and the company was no longer in the middle.

--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,36 @@
- .navbar {
-    background-color: #f493c1;
-    width: 100%;
-    padding: 1em;
-    display: flex;
-    align-items: center;
-    ustify-content: flex-start;
+.navbar {
+	background-color: #f493c1;
+	width: 100%;
+	padding: 1em;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
 }
+
 .menu-icon {
 	font-size: 3em;
 	margin-right: 1em;
 }
+
 .company-name {
 	font-size: 3em;
 	text-align: center;
 	flex-grow: 1;
 	font-family: 'Lobster';
-        }
-.product-image {
-	width: 150px;
-	height: auto;
-	}
-	
+}
+
 .nav-logo {
 	height: 50px;
 	margin-right: 1em;
-	}
+}
 
 .cart-icon {
-	height: 40px;
+	height: 20px;
+	width: 20px;
 	cursor: pointer;
+}
+
+.product-image {
+	width: 150px;
+	height: auto;
 }
